--- a/.src/Fssd.form
+++ b/.src/Fssd.form
@@ -51,4 +51,8 @@
     Font = Font["DejaVu Sans,9"]
     Border = Border.Plain
   }
+  { CompactButton Button
+    MoveScaled(3,2,12,5)
+    Text = ("Compact")
+  }
 }
