--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -103,22 +103,22 @@
     MoveScaled(79,2,3,4)
     Text = ("2:")
   }
-  { !SpinBox1 SpinBox
+  { !Boot0 SpinBox
     MoveScaled(61,2,7,4)
     #Public = True
     MaxValue = 510
   }
-  { !SpinBox2 SpinBox
+  { !Boot1 SpinBox
     MoveScaled(71,2,7,4)
     #Public = True
     MaxValue = 510
   }
-  { !SpinBox4 SpinBox
+  { !Boot3 SpinBox
     MoveScaled(91,2,7,4)
     #Public = True
     MaxValue = 510
   }
-  { !SpinBox3 SpinBox
+  { !Boot2 SpinBox
     MoveScaled(81,2,7,4)
     #Public = True
     MaxValue = 510
